--- a/华为面经中的手撕代码题目.md
+++ b/华为面经中的手撕代码题目.md
@@ -1258,6 +1258,71 @@ public class LinkedListMultiplication {
 
 
 
+01背包问题
+
+有N件物品和一个容量为V的背包。第i件物品的费用是c[i]，价值是w[i]。求解将哪些物品装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
+
+
+
+用子问题定义状态：即f[i][v]表示前i件物品恰放入一个容量为v的背包可以获得的最大价值。则其状态转移方程便是：f[i][v]=max{f[i-1][v],f[i-1][v-c[i]]+w[i]}。
+
+注意f[i][v]有意义当且仅当存在一个前i件物品的子集，其费用总和为v。所以按照这个方程递推完毕后，最终的答案并不一定是f[N][V]，而是f[N][0..V]的最大值。如果将状态的定义中的“恰”字去掉，在转移方程中就要再加入一项f[i][v-1]，这样就可以保证f[N][V]就是最后的答案。至于为什么这样就可以，由你自己来体会了。
+
+优化空间复杂度
+
+for i=1..N
+for v=V..0
+f[v]=max{f[v],f[v-c[i]]+w[i]};
+
+
+
+完全背包问题
+
+有N种物品和一个容量为V的背包，每种物品都有无限件可用。第i种物品的费用是c[i]，价值是w[i]。求解将哪些物品装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
+
+
+
+这个问题非常类似于01背包问题，所不同的是每种物品有无限件。也就是从每种物品的角度考虑，与它相关的策略已并非取或不取两种，而是有取0件、取1件、取2件……等很多种。如果仍然按照解01背包时的思路，令f[i][v]表示前i种物品恰放入一个容量为v的背包的最大权值。仍然可以按照每种物品不同的策略写出状态转移方程，像这样：f[i][v]=max{f[i-1][v-k*c[i]]+k*w[i]|0<=k*c[i]<= v}。这跟01背包问题一样有O(N*V)个状态需要求解，但求解每个状态的时间则不是常数了，求解状态f[i][v]的时间是O(v/c[i])，总的复杂度是超过O(VN)的。
+
+更高效的转化方法是：把第i种物品拆成费用为c[i]*2^k、价值为w[i]*2^k的若干件物品，其中k满足c[i]*2^k<V。这是二进制的思想，因为不管最优策略选几件第i种物品，总可以表示成若干个2^k件物品的和。
+
+
+
+多重背包问题
+
+有N种物品和一个容量为V的背包。第i种物品最多有n[i]件可用，每件费用是c[i]，价值是w[i]。求解将哪些物品装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
+
+
+
+基本算法
+这题目和完全背包问题很类似。基本的方程只需将完全背包问题的方程略微一改即可，因为对于第i种物品有n[i]+1种策略：取0件，取1件……取 n[i]件。令f[i][v]表示前i种物品恰放入一个容量为v的背包的最大权值，则：f[i][v]=max{f[i-1][v-k*c[i]]+ k*w[i]|0<=k<=n[i]}。复杂度是O(V*∑n[i])。
+
+可用通过转化成01背包降低复杂度：
+
+方法是：将第i种物品分成若干件物品，其中每件物品有一个系数，这件物品的费用和价值均是原来的费用和价值乘以这个系数。使这些系数分别为 1,2,4,...,2^(k-1),n[i]-2^k+1，且k是满足n[i]-2^k+1>0的最大整数。例如，如果n[i]为13，就将这种物品分成系数分别为1,2,4,6的四件物品。
+
+算法的复杂度由O(V*∑n[i])改进到O(V*∑log n[i])。
+
+
+
+混合三种背包问题
+问题
+如果将P01、P02、P03混合起来。也就是说，有的物品只可以取一次（01背包），有的物品可以取无限次（完全背包），有的物品可以取的次数有一个上限（多重背包）。应该怎么求解呢？
+
+考虑到在P01和P02中最后给出的伪代码只有一处不同，故如果只有两类物品：一类物品只能取一次，另一类物品可以取无限次，那么只需在对每个物品应用转移方程时，根据物品的类别选用顺序或逆序的循环即可，复杂度是O(VN)。伪代码如下：
+
+for i=1..N
+if 第i件物品是01背包
+for v=V..0
+f[v]=max{f[v],f[v-c[i]]+w[i]};
+else if 第i件物品是完全背包
+for v=0..V
+f[v]=max{f[v],f[v-c[i]]+w[i]};
+
+
+
+
+
 动态规划可能会有什么不足
 
 
@@ -1274,17 +1339,123 @@ public class LinkedListMultiplication {
 
   /a/b/c/././../../e -> /a/e
 
+```java
+//用栈
+public static String dirCompression(String path){
 
+    if (path==null|| path.length()==0)
+        return "";
+    String[] dirs=path.split("/");
+    Stack stack =new Stack();
+    for (int i=0;i<dirs.length;i++){
+        if (dirs[i].equals(".")){
+            continue;
+        }
+        else if (dirs[i].equals("..")){
+            if (!stack.isEmpty()){
+                stack.pop();
+            }
+        }else {
+            stack.push(dirs[i]);
+        }
+    }
+
+    StringBuilder sb = new StringBuilder();
+    while (!stack.isEmpty()){
+        sb.insert(0,stack.pop()+"/");
+    }
+
+    return sb.substring(0,sb.length()-1);
+
+
+}
+```
 
 
 
 手撕：树的层次遍历，就正常地用BFS写了下来，逻辑没有问题。但后来说我开放的接口不够，考虑的不够。
+
+**遍历技巧一： 数组长度做隔离**
+
+思路：
+
+获取当前的队列的长度length，一次只遍历length个节点，后续加入的元素在下一次循环遍历。
+
+伪代码如下：
+
+```
+1 queue =  [node]  // 新建一个队列，并将根节点放入队列
+2 while queue.lengh != 0
+3     length = queue.length //  获取当前队列的长度
+4     while length > 0        // 只弹出length 个节点
+5         item = queue.shift // 弹出队列的头部元素
+6         do_something(item)    //  操作该节点：比如存入一个数组或者打印
+7         queue.push(item.left)  if item.left  // 将左子节点存入队列
+8         queue.push(item.right) if item.right  // 将右子节点存入队列
+9         length--
+```
+
+
+
+**遍历技巧二：使用分隔符**
+
+思路
+
+在不同的节点中间加入一个分隔符，遍历发哦分割几点的时候，停止当前遍历。
+
+伪代码如下：
+
+```
+1 queue = [node]     // 新建一个队列，并将根节点放入到队列
+2 while queue.lengh != 0
+3     queue.push "$"    // 将分割符放入队列
+4     while(true)           // 做一个无限循环
+5            item = queue.shift   // 弹出队列的头部元素
+6            break if item == '$'   // 如果当前的节点等于分隔符，说明该层已经遍历到了最右边
+7            do_something(item)  //操作该节点
+8            queue.push(item.left)  if item.left // 将左子节点存入队列
+9            queue.push(item.right)  if item.right // 将右子节点存入队列
+```
 
 
 
 
 
 手写二叉树、数组全排列。
+
+* 递归会造成过深的栈深度
+* 考虑重复元素
+
+```java
+public class Solution {
+    public List<List<Integer>> permuteUnique(int[] nums) {
+        List<List<Integer>> res = new ArrayList<List<Integer>>();
+        if(nums==null || nums.length==0) return res;
+      //判断是否有重复
+        boolean[] used = new boolean[nums.length];
+        List<Integer> list = new ArrayList<Integer>();
+        Arrays.sort(nums);
+        dfs(nums, used, list, res);
+        return res;
+    }
+
+    public void dfs(int[] nums, boolean[] used, List<Integer> list, List<List<Integer>> res){
+        if(list.size()==nums.length){
+            res.add(new ArrayList<Integer>(list));
+            return;
+        }
+        for(int i=0;i<nums.length;i++){
+            if(used[i]) continue;
+            if(i>0 &&nums[i-1]==nums[i] && !used[i-1]) continue;
+            used[i]=true;
+            list.add(nums[i]);
+            dfs(nums,used,list,res);
+            used[i]=false;
+            list.remove(list.size()-1);
+        }
+    }
+}
+```
 
 
 
@@ -1348,7 +1519,91 @@ public class LinkedListMultiplication {
 
 CAP 和 BASE
 
+CAP理论为：一个分布式系统最多只能同时满足一致性（Consistency）、可用性（Availability）和分区容错性（Partition tolerance）这三项中的两项。
+
+## 1.1 一致性（Consistency）
+
+一致性指“all nodes see the same data at the same time”，即更新操作成功并返回客户端完成后，所有节点在同一时间的数据完全一致。
+
+## 1.2 可用性（Availability）
+
+可用性指“Reads and writes always succeed”，即服务一直可用，而且是正常响应时间。
+
+## 1.3 分区容错性（Partition tolerance）
+
+分区容错性指“the system continues to operate despite arbitrary message loss or failure of part of the system”，即分布式系统在遇到某节点或网络分区故障的时候，仍然能够对外提供满足一致性和可用性的服务。
+
+
+
+BASE理论是对CAP理论的延伸，核心思想是即使无法做到强一致性（Strong Consistency，CAP的一致性就是强一致性），但应用可以采用适合的方式达到最终一致性（Eventual Consitency）。
+
+BASE是指基本可用（Basically Available）、软状态（ Soft State）、最终一致性（ Eventual Consistency）。
+
+## 3.1 基本可用（Basically Available）
+
+基本可用是指分布式系统在出现故障的时候，允许损失部分可用性，即保证核心可用。
+
+电商大促时，为了应对访问量激增，部分用户可能会被引导到降级页面，服务层也可能只提供降级服务。这就是损失部分可用性的体现。
+
+## 3.2 软状态（ Soft State）
+
+软状态是指允许系统存在中间状态，而该中间状态不会影响系统整体可用性。分布式存储中一般一份数据至少会有三个副本，允许不同节点间副本同步的延时就是软状态的体现。mysql replication的异步复制也是一种体现。
+
+## 3.3 最终一致性（ Eventual Consistency）
+
+最终一致性是指系统中的所有数据副本经过一定时间后，最终能够达到一致的状态。弱一致性和强一致性相反，最终一致性是弱一致性的一种特殊情况。
+
+
+
+
+
+ACID是传统数据库常用的设计理念，追求强一致性模型。BASE支持的是大型分布式系统，提出通过牺牲强一致性获得高可用性。
+
+ACID和BASE代表了两种截然相反的设计哲学
+
+在分布式系统设计的场景中，系统组件对一致性要求是不同的，因此ACID和BASE又会结合使用。
+
+
+
  Reids 集群选举，心跳检测
+
+### 心跳检测
+
+在命令传播阶段，**从服务器默认以每秒一次的频率**，向主服务器发送命令：
+
+**REPLCONF ACK <replication_offset>** //replication_offset是从服务器当前的复制偏移量。
+
+心跳检测的作用：检测主服务器的网络连接状态；辅助实现min-slaves选项；检测命令丢失。
+
+检测主从服务器的网络连接状态
+
+通过向主服务器发送INFO replication命令，可以列出从服务器列表，可以看出从最后一次向主发送命令距离现在过了多少秒。
+
+lag的值应该在0或1之间跳动，如果超过1则说明主从之间的连接有故障。
+
+辅助实现min-slaves选项
+
+Redis可以通过配置**防止主服务器在不安全的情况下执行写命令**；
+
+min-slaves-to-write 3
+
+min-slaves-max-lag 10
+
+上面的配置表示：从服务器的数量少于3个，或者三个从服务器的延迟（lag）值都大于或等于10秒时，主服务器将拒绝执行写命令。这里的延迟值就是上面INFOreplication命令的lag值。
+
+检测命令丢失
+
+如果因为网络故障，主服务器传播给从服务器的**写命令在半路丢失**，那么当从服务器向主服务器发送REPLCONF ACK命令时，主服务器将发觉从服务器当前的**复制偏移量**少于自己的复制偏移量，然后主服务器就会根据从服务器提交的复制偏移量，在复制积压缓冲区里面找到从服务器缺少的数据，并将这些数据重新发送给从服务器。
+
+主服务器向从服务器**补发缺失数据**这一操作的原理和部分重同步操作的原理非常相似，它们的区别在于：补发缺失数据操作在主从服务器没有断线的情况下执行，而部分重同步操作则在主从服务器断线并重连之后执行。
+
+
+
+
+
+
+
+
 
 分库分表，数据库事务，分布式事务
 
@@ -1390,6 +1645,12 @@ epoll和select poll的区别，开始讲源码然后讲了一会他让我停了.
 
 
 说下自己对  Zookeeper 的理解已经在项目中是如何应用的，自己扯 ZAB，已经 ZK 在 Dubbo 做注册中心，在 Kafka 中做集群管理，还有分布式锁实现，集群选举 Raft 和 Paxos 区别已经具体的流程
+
+<https://www.cnblogs.com/bangerlee/p/5991417.html>
+
+
+
+
 
 GC 调优 
 
