--- a/华为面经中的手撕代码题目.md
+++ b/华为面经中的手撕代码题目.md
@@ -1274,6 +1274,23 @@ for i=1..N
 for v=V..0
 f[v]=max{f[v],f[v-c[i]]+w[i]};
 
+    public static int ZeroOnePack(int V,int N,int[] weight,int[] value){
+    
+        //初始化动态规划数组int
+        int[][] dp = new int[N+1][V+1];
+        //将dp[i][0]和dp[0][j]均置为0
+        for(int i=1;i<N+1;i++){
+            for(int j=1;j<V+1;j++){
+                
+                //由于weight和value数组下标都是从0开始,注意第i个物品的重量为weight[i-1],价值为value[i-1]
+                if(weight[i-1] > j)//如果第i件物品的重量大于背包容量j,则不装入背包
+                    dp[i][j] = dp[i-1][j];
+                else//判断
+                    dp[i][j] = Math.max(dp[i-1][j],dp[i-1][j-weight[i-1]]+value[i-1]);
+            }
+        }
+      return dp[N][V];
+      }
 
 
 完全背包问题
@@ -1286,14 +1303,42 @@ f[v]=max{f[v],f[v-c[i]]+w[i]};
 
 更高效的转化方法是：把第i种物品拆成费用为c[i]*2^k、价值为w[i]*2^k的若干件物品，其中k满足c[i]*2^k<V。这是二进制的思想，因为不管最优策略选几件第i种物品，总可以表示成若干个2^k件物品的和。
 
+    public static int completePack(int V,int N,int[] weight,int[] value){
+        int[][] dp = new int[N+1][V+1];
+        for(int i=1;i<N+1;i++){
+            for(int j=1;j<V+1;j++){
+                if(weight[i-1] > j)
+                    dp[i][j] = dp[i-1][j];
+                else
+                    dp[i][j] = Math.max(dp[i-1][j],dp[i][j-weight[i-1]]+value[i-1]);
+            }
+        }
+        returndp[N][V];
+      }
 
 
 多重背包问题
 
 有N种物品和一个容量为V的背包。第i种物品最多有n[i]件可用，每件费用是c[i]，价值是w[i]。求解将哪些物品装入背包可使这些物品的费用总和不超过背包容量，且价值总和最大。
 
-
-
+    public static int manyPack(int V,int N,int[] weight,int[] value,int[] num){
+        //初始化动态规划数组
+        int[][] dp = new int[N+1][V+1];
+        for(int i=1;i<N+1;i++){
+            for(int j=1;j<V+1;j++){
+                if(weight[i-1] > j)
+                    dp[i][j] = dp[i-1][j];
+                else{
+                    //考虑物品的件数限制
+                    int maxV = Math.min(num[i-1],j/weight[i-1]);
+                    for(int k=0;k<maxV+1;k++){
+                        dp[i][j]=Math.max(dp[i-1][j],dp[i-1][j-k*weight[i-1]]+k*value[i-1]);
+                    }
+                }
+            }
+        }
+        return dp[N][V];
+    }
 基本算法
 这题目和完全背包问题很类似。基本的方程只需将完全背包问题的方程略微一改即可，因为对于第i种物品有n[i]+1种策略：取0件，取1件……取 n[i]件。令f[i][v]表示前i种物品恰放入一个容量为v的背包的最大权值，则：f[i][v]=max{f[i-1][v-k*c[i]]+ k*w[i]|0<=k<=n[i]}。复杂度是O(V*∑n[i])。
 
@@ -1461,9 +1506,134 @@ public class Solution {
 
 撕了一个穿过最少砖头的题，不算难。一个最长回文子串，dp
 
+```java
+/**
+用一个map记录砖块边缘的位置。最后遍历
+*/
+public int leastBricks(List < List < Integer >> wall) {
+        HashMap < Integer, Integer > map = new HashMap < > ();
+        for (List < Integer > row: wall) {
+            int sum = 0;
+            for (int i = 0; i < row.size() - 1; i++) {
+                sum += row.get(i);
+                if (map.containsKey(sum))
+                    map.put(sum, map.get(sum) + 1);
+                else
+                    map.put(sum, 1);
+            }
+        }
+        int res = wall.size();
+        for (int key: map.keySet())
+            res = Math.min(res, wall.size() - map.get(key));
+        return res;
+    }
+```
 
+
+
+```java
+/**
+ * 从中间往两边扩散
+ * @param s
+ * @return
+ */
+public String longestPalindrome(String s) {
+    if (s == null || s.length() < 1) return "";
+    int start = 0, end = 0;
+    for (int i = 0; i < s.length(); i++) {
+        int len1 = expandAroundCenter(s, i, i);
+        int len2 = expandAroundCenter(s, i, i + 1);
+        int len = Math.max(len1, len2);
+        if (len > end - start) {
+            start = i - (len - 1) / 2;
+            end = i + len / 2;
+        }
+    }
+    return s.substring(start, end + 1);
+}
+
+private int expandAroundCenter(String s, int left, int right) {
+    int L = left, R = right;
+    while (L >= 0 && R < s.length() && s.charAt(L) == s.charAt(R)) {
+        L--;
+        R++;
+    }
+    return R - L - 1;
+}
+```
+
+```java
+/**
+ * 动态规划的解法
+ * dp[i][j]代表第i到j个是不是一个回文字符串。
+ * @param s
+ * @return
+ */
+public String longestPalindrome2(String s) {
+    int n = s.length();
+    String res = null;
+
+    boolean[][] dp = new boolean[n][n];
+    //保证小问题先解决，大问题后解决
+    for (int i = n - 1; i >= 0; i--) {
+        for (int j = i; j < n; j++) {
+            dp[i][j] = s.charAt(i) == s.charAt(j) && (j - i < 3 || dp[i + 1][j - 1]);
+
+            if (dp[i][j] && (res == null || j - i + 1 > res.length())) {
+                res = s.substring(i, j + 1);
+            }
+        }
+    }
+
+    return res;
+}
+```
 
  最长公共子串 判断两字符串中是否字符相同，顺序不同
+
+![img](https://img-blog.csdn.net/20160719110614857?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+
+最优公共子串的区别在于上面变为0,当xi!=yj时，c[i,j]=0。
+
+```java
+// 假如返回两个字符串的最长公共子序列的长度
+public static int[][] longestCommonSubsequence(String str1, String str2) {
+    int[][] matrix = new int[str1.length() + 1][str2.length() + 1];//建立二维矩阵
+    // 初始化边界条件
+    for (int i = 0; i <= str1.length(); i++) {
+            matrix[i][0] = 0;//每行第一列置零
+    }
+    for (int j = 0; j <= str2.length(); j++) {
+            matrix[0][j] = 0;//每列第一行置零
+    }
+    // 填充矩阵
+    for (int i = 1; i <= str1.length(); i++) {
+            for (int j = 1; j <= str2.length(); j++) {
+                    if (str1.charAt(i - 1) == str2.charAt(j - 1)) {
+                            matrix[i][j] = matrix[i - 1][j - 1] + 1;
+                    } else {
+                            matrix[i][j] = (matrix[i - 1][j] >= matrix[i][j - 1] ? matrix[i - 1][j]
+                                            : matrix[i][j - 1]);
+                    }
+            }
+    }
+    return matrix;
+}
+//根据矩阵输出LCS
+public static void print(int[][] opt, String X, String Y, int i, int j) {
+    if (i == 0 || j == 0) {
+            return;
+    }
+    if (X.charAt(i - 1) == Y.charAt(j - 1)) {
+            print(opt, X, Y, i - 1, j - 1);
+            System.out.print(X.charAt(i - 1));
+    } else if (opt[i - 1][j] >= opt[i][j]) {
+            print(opt, X, Y, i - 1, j);
+    } else {
+            print(opt, X, Y, i, j - 1);
+    }
+}
+```
 
 
 
@@ -1477,13 +1647,217 @@ public class Solution {
 
 从数组中查找某个数k 查到返回index 否则返回0
 
+```java
+public int findKthLargest(int[] nums, int k) {
+    // init heap 'the smallest element first'
+    PriorityQueue<Integer> heap =
+        new PriorityQueue<Integer>((n1, n2) -> n1 - n2);
+
+    // keep k largest elements in the heap
+    for (int n: nums) {
+      heap.add(n);
+      if (heap.size() > k)
+        heap.poll();
+    }
+
+    // output
+    return heap.poll();        
+      }
+```
+
+
 
 
 手撕代码:给定一定金额，有三样商品，有多少种买法能恰好花完
 
+dp[i]为凑出i元的方案数
+
+f[i]+=f[i-w]
+
+f[0]=1
+
+```java
+public static int useMoney(int money, int[] goods){
+    int[] dp=new int[money+1];
+
+    dp[0]=1;
+    for (int i=0;i<goods.length;i++){
+        for (int j=goods[i];j<=money;j++){
+            if (j-goods[i]>=0) {
+                dp[j]+= dp[j - goods[i]];
+            }
+        }
+    }
+
+    return dp[money];
+}
+```
+
+
+
+
+
+
+
 手撕代码:字符串s和p，在s中删除最少的字符，使p为s的子串
 
+
+
+
+
+给定一个字符串s，你可以从中删除一些字符，使得剩下的串是一个回文串。如何删除才能使得回文串最长呢？
+
+输出需要删除的字符的个数。
+
+思路：
+
+先求字符串s的反转串rs，然后求s和rs的最大公共子序列（子序列和子串的区别是子序列不要求连续，子串要求连续），则最大公共子序列的长度即为最大回文串的长度。（注意：字符串和其反转串的最大公共子序列一定是对称的，即回文）
+
+关于求两个字符串s1和s2的最长公共子序列，可以用动态规划来做。
+
+DP\[i][j]表示s1左边i个字符与s2左边j个字符的最大公共子序列，则有以下关系：
+
+if s1[i]==s2[j]    DP\[i][j]=1+DP\[i-1][j-1]
+
+else DP\[i][j]=max(DP\[i-1][j], DP\[i][j-1])
+
+
+
+
+
+
+```java
+/**
+ * dp[i][j]代表从word1前i个字符转换成word2所需要的步骤
+ *
+ * 递推:
+ * if(word1.charAt(i)==word2.charAt(j)){
+ *     dp[i][j]=dp[i-1][j-1];
+ * }else{
+ *     dp[i][j]=1+min(dp[i-1][j],dp[i][j-1],dp[i-1][j-1])
+ * }
+ *
+ * 这里面注意为什么可以这样做:
+ * 1.dp[i][j]可以在dp[i-1][j]基础上删除一个字符
+ * 2.dp[i][j]可以在dp[i][j-1]基础上添加一个字符
+ * 3.dp[i][j]可以在dp[i-1][j-1]基础上替换最后一个字符
+ *
+ *
+ * 初始:
+ * dp[0][k]=k;
+ * dp[k][0]=k;
+ *
+ * @param word1
+ * @param word2
+ * @return
+ */
+public int minDistance(String word1, String word2) {
+
+    if (word1.length()==0)return word2.length();
+    if (word2.length()==0)return word1.length();
+
+    int[][] dp=new int[word1.length()+1][word2.length()+1];
+
+    for (int k=0;k<dp.length;k++){
+        dp[k][0]=k;
+    }
+
+    for (int k=0;k<dp[0].length;k++){
+        dp[0][k]=k;
+    }
+
+
+    for (int i=1;i<dp.length;i++){
+        for (int j=1;j<dp[0].length;j++){
+            if (word1.charAt(i-1)==word2.charAt(j-1)){
+                dp[i][j]=dp[i-1][j-1];
+            }else {
+                dp[i][j]=1+Math.min(dp[i-1][j],Math.min(dp[i][j-1],dp[i-1][j-1]));
+            }
+        }
+    }
+
+
+    return dp[word1.length()][word2.length()];
+}
+```
+
+
+
+
+
 手撕代码是桶排序
+
+分进小桶，桶内排序
+
+```java
+public class BucketSort implements IArraySort {
+
+    private static final InsertSort insertSort = new InsertSort();
+
+    @Override
+    public int[] sort(int[] sourceArray) throws Exception {
+        // 对 arr 进行拷贝，不改变参数内容
+        int[] arr = Arrays.copyOf(sourceArray, sourceArray.length);
+
+        return bucketSort(arr, 5);
+    }
+
+    private int[] bucketSort(int[] arr, int bucketSize) throws Exception {
+        if (arr.length == 0) {
+            return arr;
+        }
+
+        int minValue = arr[0];
+        int maxValue = arr[0];
+        for (int value : arr) {
+            if (value < minValue) {
+                minValue = value;
+            } else if (value > maxValue) {
+                maxValue = value;
+            }
+        }
+
+        int bucketCount = (int) Math.floor((maxValue - minValue) / bucketSize) + 1;
+        int[][] buckets = new int[bucketCount][0];
+
+        // 利用映射函数将数据分配到各个桶中
+        for (int i = 0; i < arr.length; i++) {
+            int index = (int) Math.floor((arr[i] - minValue) / bucketSize);
+            buckets[index] = arrAppend(buckets[index], arr[i]);
+        }
+
+        int arrIndex = 0;
+        for (int[] bucket : buckets) {
+            if (bucket.length <= 0) {
+                continue;
+            }
+            // 对每个桶进行排序，这里使用了插入排序
+            bucket = insertSort.sort(bucket);
+            for (int value : bucket) {
+                arr[arrIndex++] = value;
+            }
+        }
+
+        return arr;
+    }
+
+    /**
+     * 自动扩容，并保存数据
+     *
+     * @param arr
+     * @param value
+     */
+    private int[] arrAppend(int[] arr, int value) {
+        arr = Arrays.copyOf(arr, arr.length + 1);
+        arr[arr.length - 1] = value;
+        return arr;
+    }
+
+}
+```
+
+
 
 手撕代码 数组中除了两个数只出现了一次，其余都出现了两次，找到这两个数 剑指offer原题
 
